--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mdd",
   "description": "Model Driven Development utilities to speed up development of web app.",
-  "main": "mdd.js",
+  "main": ["mdd.js","services/type-utils.js"],
   "version": "1.0.2",
   "authors": [
     "bitliner <giovanni.gaglione@gmail.com>"
