-removed list from html +service object-utils for uncamel case of object keys +updated bower.json

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "main": [
     "mdd.js",
     "services/type-utils.js"
+    "services/object-utils.js"
   ],
   "version": "1.0.4",
   "authors": [
